CHANGES

release 75.3
 - default UTF8 output for samplesheets
 - add number of lanes to run list views
 - new farm host for a samplesheet daemon

release 75.2
 - host-agnostic jenkins daemon
 - version of npg::api::request module updated to help tracking requests

release 75.1
 - patch for samplesheet parser
 - switch live npg api base URL to a different host in order to separate
     human- and api-driven requests
 - removed depricated methods from npg::api::run_lane
 - removed unused save2cache method from npg::api::util
 - simplified logic for saving to cache in npg::api::request;
     removed unused save2cache method
 - staging area indexes defined in single place

release 75.0
 - authentication through npg own enigmatic.cgi residing relative to
   where the request comes from
 - updated expected result for a live reference retrieval test following
   a change in the reference genome study field
 - add new staging areas 52 to 55
 - don't bail out on finding no runfolders when FTP'ing to instrument for update info
 - sample sheet generator extended to include npg specific fields and deal with multiple lanes
 - use URI escaping for samplesheet contents instead of squashing whitespace and flipping , for |

release 74.14
 - minor bug fix to lims sample_description

release 74.13
 - data_access_group method to lims (study) to determine data access control requirements
 - add new staging area (50)

release 74.12
 - to ensure host-specific path is used when calling a script, use bare script name in staging
   daemon definition

release 74.11
 - samplesheet lims driver moved to st::api::lims namespace, contains parser only
 - daemon utility: execute daemons in a bash login shell in order to pick up
   target host environment; remove setting PERL5LIB and perl version
   from definitions of daemons for samplesheet and staging
 - removed Makefile.PL for web deployment - this functionality is now in Build.PL

release 74.10