@@ -113,8 +113,20 @@ Driver type (xml, etc), currently defaults to xml
 has 'driver_type' => (
                         isa     => 'Str',
                         is      => 'ro',
-                        default => $IMPLEMENTED_DRIVERS[0],
+                        lazy_build => 1,
                      );
+sub _build_driver_type {
+  my $self = shift;
+  my $cached_path = $ENV{'NPG_CACHED_SAMPLESHEET_FILE'};
+  if ($self->_has_path || ($cached_path && -f $cached_path)) {
+    if (!$self->_has_path) {
+      $self->_set_path($cached_path);
+      $self->clear_batch_id();
+    }
+    return $IMPLEMENTED_DRIVERS[1];
+  }
+  return $IMPLEMENTED_DRIVERS[0];
+}
 
 =head2 driver
 
@@ -129,8 +141,8 @@ has 'driver' => (
 sub _build_driver {
   my $self = shift;
   my $d_package = $self->_driver_package_name;
-  ##no critic (ProhibitStringyEval RequireCheckingReturnValueOfEval)
-  eval "require $d_package";
+  ##no critic (ProhibitStringyEval)
+  eval "require $d_package" or croak "Error loading package $d_package: " . $EVAL_ERROR;
   ##use critic
   my $ref = {};
   foreach my $attr (qw/tag_index position id_run path/) {
@@ -216,9 +228,11 @@ Samplesheet path
 
 =cut
 has 'path' => (
-                  isa      => 'Str',
-                  is       => 'ro',
-                  required => 0,
+                  isa       => 'Str',
+                  is        => 'ro',
+                  required  => 0,
+                  predicate => '_has_path',
+                  writer    => '_set_path',
               );
 
 =head2 id_run
@@ -246,20 +260,16 @@ Tag index, optional attribute.
 Batch id, optional attribute.
 
 =cut
-has 'batch_id'  =>        (isa             => 'NpgTrackingPositiveInt',
+has 'batch_id'  =>        (isa             => 'Maybe[NpgTrackingPositiveInt]',
                            is              => 'ro',
                            lazy_build      => 1,
                           );
 sub _build_batch_id {
   my $self = shift;
-
-  if ($self->id_run) {
-    if ($self->driver_type eq 'xml') {
-      return $self->driver->batch_id;
-    }
-    croak q[Cannot build batch_id from id_run for driver type ] . $self->driver_type;
+  if ($self->id_run && $self->driver_type eq 'xml') {
+    return $self->driver->batch_id;
   }
-  croak q[Cannot build batch_id: id_run is not supplied];
+  return;
 }
 
 =head2 tag_sequence
