@@ -94,7 +94,7 @@ cmp_deeply( $test[0]->batch_details(),
 
 my $bd = $test[1]->batch_details();
 is($bd->{batch_id}, undef, 'batch id undefined');
-like($bd->{error}, qr/Attribute \(batch_id\) does not pass the type constraint because: Validation failed for 'NpgTrackingPositiveInt' (failed\s)?with value 0/, 'Error string for batch id zero is correct');
+like($bd->{error}, qr/Attribute \(batch_id\) does not pass the type constraint because: Validation failed .+ with value 0/, 'Error string for batch id zero is correct');
 
 lives_ok {  $test[2] = npg::email::event::status_change::run->new(
                     { id_event    => 26,
